--- a/Ecommerce.Common/Ecommerce.Common.csproj
+++ b/Ecommerce.Common/Ecommerce.Common.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.21" />
   </ItemGroup>
 
   <ItemGroup>
