--- a/Ecommerce/appsettings.json
+++ b/Ecommerce/appsettings.json
@@ -15,8 +15,9 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Trace",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "ConnectionStrings": {
