--- a/Ecommerce/appsettings.json
+++ b/Ecommerce/appsettings.json
@@ -13,6 +13,7 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     "Scopes": "access_as_user",
     "CallbackPath": "/signin-oidc"
   },
+  "TokenKey": "super secret unguessable key",
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
@@ -22,6 +23,12 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=AngularECOMMERCE;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JwtConfig": {
+    "validIssuer": "https://localhost:7106/",
+    "validAudience": "https://localhost:7106/",
+    "secret": "WXJSAMFKLSTEHSYOV",
+    "expiresIn": 10
   },
   "AllowedHosts": "*"
 }
